// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`register user: catch bad email and password 1`] = `
Array [
  Object {
    "isEmail": "email must be an email",
  },
  Object {
    "length": "password must be longer than or equal to 3 characters",
  },
]
`;

exports[`register user: catch bad password 1`] = `
Array [
  Object {
    "length": "password must be longer than or equal to 3 characters",
  },
]
`;
